# powerpoint-mcp

./: .gitignore.backup  README.md  pyproject.toml
powerpoint_mcp/: __init__.py  server.py
powerpoint_mcp/backends/: __init__.py  base.py  macos.py  types.py  windows.py
powerpoint_mcp/tool_descriptions/: __init__.py  add_slide_with_layout.py  add_speaker_notes.py  analyze_template.py  list_templates.py  manage_presentation.py  manage_slide.py  populate_placeholder.py  powerpoint_evaluate.py  slide_snapshot.py  switch_slide.py
powerpoint_mcp/tools/: __init__.py  add_animation.py  add_slide_with_layout.py  add_speaker_notes.py  analyze_template.py  evaluate.py  list_templates.py  manage_slide.py  populate_placeholder.py  presentation.py  skills.py  snapshot.py  switch_slide.py
test_tools/: main.py  pyproject.toml  template_discovery_results.json  test_5_placeholders.py  test_add_slide_with_layout.py  test_add_speaker_notes.py  test_analyze_template.py  test_image_placeholders.py  test_list_templates.py  test_manage_slide.py  test_matplotlib_plots.py  test_screenshot.py
