[project]
name = "powerpoint-mcp"
version = "0.1.0"
description = "Cross-platform Model Context Protocol server for PowerPoint automation (Windows and macOS)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Ayushmaniar"}
]
keywords = [
    "mcp",
    "powerpoint",
    "automation",
    "model-context-protocol",
    "cross-platform"
]
classifiers = [
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Topic :: Office/Business",
]
dependencies = [
    "mcp>=1.14.0",
    "Pillow>=10.4.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
windows = ["pywin32>=311"]
macos = []

[project.scripts]
powerpoint-mcp = "powerpoint_mcp.server:main"

[project.urls]
Repository = "https://github.com/Ayushmaniar/powerpoint-mcp"
Homepage = "https://github.com/Ayushmaniar/powerpoint-mcp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["powerpoint_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/powerpoint_mcp",
    "/pyproject.toml",
]
exclude = [
    "*.pptx",
    "*.ppt",
    "*.jpg",
    "*.png",
    "*.docx",
    "*.pdf",
    ".claude/",
    "Academic Project/",
    "test_tools/",
    "dist/",
]
